@@ -104,6 +104,7 @@ Please note that our support for the checkout block is still experimental and th
 = 1.7.0 - 2020-xx-xx =
 * Fix - Fix ordering of payment detail timeline events.
 * Fix - Fix error when retrying to save a card in the Add Payment Method screen after failing SCA authentication.
+* Add - Allow signing up for a subscription with free trial with a credit card that requires SCA authentication.
 
 = 1.6.0 - 2020-10-15 =
 * Fix - Trimming the whitespace when updating the bank statement descriptor.
